--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "com.github.skydoves:progressview:1.1.1"
 }
