--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "com.github.skydoves:progressview:1.1.1"
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation "com.github.florent37:glidepalette:2.1.2"
 }
